examples/test/testpolicy17039.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17039
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key30: value47
      key23: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value22
          key47: value10
          key22: value0
      podSelector:
        matchLabels:
          key11: value26
